tests/resources/valid/error/with.mamba
with my_resource as other
    do_something()

with my_resource
    do_something()
